--- a/src/cards/NewArrivals.css
+++ b/src/cards/NewArrivals.css
@@ -134,10 +134,22 @@
   color: white;
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 1200px) {
   .card-container {
     grid-template-columns: repeat(4, 1fr); 
   }
+  .card-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, auto);
+    row-gap: 2rem;
+    column-gap: 1rem;
+    padding: 1rem;
+    max-width: 1000px;
+    margin: 0 auto;
+    justify-content: center;
+  }
+
 }
 
 @media (max-width: 992px) {
@@ -150,7 +162,9 @@
   .card-container {
     grid-template-columns: repeat(2, 1fr); 
   }
-
+  .title {
+    font-size: 0.40rem;
+  }
   .product-actions {
     flex-direction: column;
     gap: 10px;
