--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -123,9 +123,16 @@ color: #ff0000;
 }
 .input-email{
     width: 500px;
-    height: 50px;
-    border-radius: 5px 5px 5px 5px;
+    padding: 1.20rem;
+    border-radius: 5px 0px 0px 5px;
     border: none;
+    background-color: white;
+}
+.btn-email{
+    height: 3.60rem;
+    border: none;
+    width: 5rem;
+    cursor: pointer;
 }
 .email-title{
     font-size: 2rem;
@@ -217,6 +224,11 @@ color: #ff0000;
     margin-bottom: 20px; 
    
 }
+.btn-email{
+    padding: 1rem;
+    border: none;
+}
+
 .footer-info,
 .footer-account, .get-in-touch { 
   margin-top: 20px;
