--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -193,3 +193,30 @@
         text-align: center;
     }
 }
+
+.moving-text {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    box-sizing: border-box;
+    text-align: center; /* Center the text */
+  }
+  
+  .moving-text p {
+    display: inline-block;
+    animation: pulse 2s ease-in-out infinite; 
+    padding-top: 10px;
+  }
+  
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
