--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -230,6 +230,7 @@
     flex-direction: column;
     justify-content: space-between;
     position: relative;
+    padding-bottom: 60px; /* Adjust padding to prevent text from being hidden by the footer */
   }
 
   .product-image {
@@ -240,10 +241,12 @@
     text-align: center;
   }
 
+  /* Hide desktop footer buttons */
   .product-footer {
     display: none;
   }
 
+  /* Mobile footer buttons */
   .product-footer-mobile {
     display: flex;
     justify-content: space-between;
@@ -253,7 +256,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 50px; 
+    height: 50px; /* Ensure uniform height for all buttons */
   }
 
   .icon-button-mobile,
@@ -261,20 +264,23 @@
     background-color: #ec6801;
     border: none;
     color: white;
-    font-size: 1rem;
+    font-size: 0.50rem; /* Ensure the same font size */
     cursor: pointer;
-    flex: 1; 
+    flex: 1; /* Make all buttons take equal space */
     display: flex;
     justify-content: center;
     align-items: center;
     transition: background-color 0.3s ease;
-    height: 100%; 
+    height: 60%; /* Ensure full height */
     padding: 0.5rem;
   }
 
+  /* Uniform width and height for icons and buttons */
   .icon-button-mobile {
-    font-size: 1.5rem; 
+    font-size: 1.5rem; /* Larger icon size */
   }
+
+  /* Add hover effect for buttons */
   .icon-button-mobile:hover,
   .add-to-cart-button-mobile:hover {
     background-color: #ca8b5b;
@@ -283,27 +289,5 @@
   .pre-order {
     font-size: 0.60rem;
     font-weight: bold;
-  }
-}
-@media (max-width: 390px) {
-
-  .product-card {
-    width: 100%; 
-    height: 100%;
-  }
-
-  .product-image {
-    height: 100px; /* Adjust image height for small screens */
-  }
-  .product-list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-    padding: 5rem;
-    margin: 0;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    justify-content: center;
-    
   }
 }
