--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -230,7 +230,7 @@
     flex-direction: column;
     justify-content: space-between;
     position: relative;
-    padding-bottom: 60px; /* Adjust padding to prevent text from being hidden by the footer */
+    padding-bottom: 60px;
   }
 
   .product-image {
@@ -241,12 +241,10 @@
     text-align: center;
   }
 
-  /* Hide desktop footer buttons */
   .product-footer {
     display: none;
   }
 
-  /* Mobile footer buttons */
   .product-footer-mobile {
     display: flex;
     justify-content: space-between;
@@ -256,31 +254,47 @@
     bottom: 0;
     left: 0;
     right: 0;
-    height: 50px; /* Ensure uniform height for all buttons */
+    height: 50px;
   }
+  .iconF-button,
+.add-to-cart-button-mobile {
+  background-color: #ec6801; 
+  border: none; 
+  color: white; 
+  font-size: 0.875rem; 
+  cursor: pointer;
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  transition: background-color 0.3s ease; 
+}
+
+.iconF-button:hover,
+.add-to-cart-button-mobile:hover {
+  background-color: #ca8b5b; 
+}
+
 
   .icon-button-mobile,
   .add-to-cart-button-mobile {
     background-color: #ec6801;
     border: none;
     color: white;
-    font-size: 0.50rem; /* Ensure the same font size */
+    font-size: 0.50rem; 
     cursor: pointer;
-    flex: 1; /* Make all buttons take equal space */
+    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: background-color 0.3s ease;
-    height: 60%; /* Ensure full height */
+    height: 60%; 
     padding: 0.5rem;
   }
 
-  /* Uniform width and height for icons and buttons */
   .icon-button-mobile {
-    font-size: 1.5rem; /* Larger icon size */
+    font-size: 1.5rem; 
   }
 
-  /* Add hover effect for buttons */
   .icon-button-mobile:hover,
   .add-to-cart-button-mobile:hover {
     background-color: #ca8b5b;
