--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -28,6 +28,7 @@ footer {
     color: #FFBF00;
     padding-bottom: 50px;
     margin-top: 20px;
+    padding-right: 50px;
 }
 .footer-main .footer-info a,
 .footer-main .footer-account a,
