--- a/src/cards/NewArrivals.css
+++ b/src/cards/NewArrivals.css
@@ -133,9 +133,6 @@
   padding: 0.20rem;
   color: white;
 }
-.cart-icon{
-  display: none;
-}
 
 @media (min-width: 1200px) {
   .card-container {
@@ -175,19 +172,11 @@
     gap: 10px;
   }
 
-  .add-to-cart-buttonF {
-    background-color: #ec6801;
-    border: none;
-    color: white;
-    font-size: 0.50rem; 
-    cursor: pointer;
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.3s ease;
-    height: 60%; 
-    padding: 0.5rem;
+  .add-to-cart-buttonF,
+  .iconF-button {
+    width: 100%;
+    height: 30px;
+    font-size: 0.55rem;
   }
 
   .icons-newarrival {
@@ -202,14 +191,6 @@
   .product-info {
     padding-bottom: 50px; 
   }
-  .cart-icon{
-    display: block;
-  }
-  .iconF-button span {
-    visibility: hidden; 
-}
-
-  
 }
 
 @media (max-width: 480px) {
@@ -239,13 +220,6 @@
   }
 
   .product-info {
-    padding-bottom: 50px;
+    padding-bottom: 50px; 
   }
-  .cart-icon{
-    display: block;
-  }
-  .iconF-button span {
-    visibility: hidden;
-}
-
 }
