--- a/src/cards/NewArrivals.css
+++ b/src/cards/NewArrivals.css
@@ -25,6 +25,10 @@
   justify-content: space-between;
 }
 
+.product-card {
+  width: 280px;
+}
+
 .product-card:hover .icons-newarrival {
   opacity: 1;
   pointer-events: auto;
