--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -257,8 +257,15 @@ a {
     }
 
     .btn-email {
-        padding: 2rem;
         border: none;
+        width: 5rem;
+        cursor: pointer;
+        padding: 1rem;
+        border-radius: 0 5px 5px 0;
+        background-color: #ffffff;
+        color: rgb(0, 0, 0);
+        align-items: center;
+        justify-content: center;
     }
 
     .footer-info,
