adjusted the email btn and the fontweight of add to cart

--- a/src/cards/NewArrivals.css
+++ b/src/cards/NewArrivals.css
@@ -105,6 +105,7 @@
   transition: background-color 0.3s ease, opacity 0.3s ease;
   color: white;
   margin: 0;
+  font-weight: bold;
 }
 
 .iconF-button {
