--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-body{
+body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
   background-color: #373838;
   font-family: "Poppins", sans-serif;
-  
+  padding-top: 150px;
+
 }
