--- a/src/cards/NewArrivals.css
+++ b/src/cards/NewArrivals.css
@@ -1,10 +1,22 @@
 .title {
   padding: 50px 20px;
+}
+
+.title>h1 {
   text-align: center;
   color: white;
-  font-size: 1.50rem;
-  font-weight: bold;
+  font-size: 2.500rem;
+  font-weight: 550;
+  font-family: "Fredoka", arial, sans-serif;
+
+  text-shadow:
+    1px 1px 0 #ff6f00,
+    -1px -1px 0 #ff6f00,
+    1px -1px 0 #ff6f00,
+    -1px 1px 0 #ff6f00;
+
 }
+
 
 .cards-content {
   padding: 1rem;
