--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -166,13 +166,14 @@
 }
 
 .popular-brands-title {
-    padding-bottom: 30px;
+    padding-bottom: 50px;
     align-items: center;
     text-align: center;
 
 }
 
 .popular-brands-title h1 {
+    margin-bottom: 70px;
     text-align: center;
     color: white;
     font-size: 2.500rem;
