--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -120,6 +120,23 @@
     overflow: hidden;
 }
 
+.view-more {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.view-more-btn {
+    padding: 10px 20px;
+    border: none;
+    background-color: #ff0037;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+
 .images {
     width: 100%;
     height: 200px;
