--- a/src/cards/Product.css
+++ b/src/cards/Product.css
@@ -81,6 +81,35 @@
   margin-bottom: 0.5rem;
 }
 
+.product-card {
+  position: relative;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  background-color: #161616;
+  width: 250px;
+  margin: auto;
+  flex: 1;
+  transition: transform 0.5s ease;
+}
+
+.product-image {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+  padding-top: 1rem;
+  transition: transform 0.5s ease;
+}
+
+.product-card:hover .product-image {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
 .product-footer {
   display: flex;
   align-items: center;
@@ -106,6 +135,7 @@
   transition: background-color 0.3s ease, opacity 0.3s ease;
   color: white;
   font-weight: bold;
+  z-index: 500;
 
 }
 
