--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -13,7 +13,7 @@
 .home-container>h1 {
     text-align: center;
     color: white;
-    font-size: 2.500rem;
+    font-size: 3rem;
     font-weight: 550;
     font-family: "Fredoka", arial, sans-serif;
 
@@ -168,7 +168,7 @@
 .ATC>h1 {
     text-align: center;
     color: white;
-    font-size: 2.500rem;
+    font-size: 3rem;
     font-weight: 550;
     font-family: "Fredoka", arial, sans-serif;
 
@@ -199,7 +199,7 @@
     margin-bottom: 70px;
     text-align: center;
     color: white;
-    font-size: 2.500rem;
+    font-size: 3rem;
     font-weight: 550;
     font-family: "Fredoka", arial, sans-serif;
 
@@ -236,7 +236,7 @@
 .store-loc {
     text-align: center;
     color: white;
-    font-size: 2.500rem;
+    font-size: 3rem;
     font-weight: 550;
     font-family: "Fredoka", arial, sans-serif;
 
@@ -246,6 +246,12 @@
         1px -1px 0 #ff6f00,
         -1px 1px 0 #ff6f00;
 
+}
+
+.timer-bg{
+    background-color: #161616;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 
