--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -229,8 +229,23 @@
 }
 
 
-.map-section {
-    padding-top: 200px;
+
+.map-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+}
+
+.gmap-frame {
+    flex: 1;
+}
+
+.store-address {
+    margin-left: 20px;
+    max-width: 200px;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .store-loc {
@@ -239,14 +254,13 @@
     font-size: 3rem;
     font-weight: 550;
     font-family: "Fredoka", arial, sans-serif;
-
     text-shadow:
         1px 1px 0 #ff6f00,
         -1px -1px 0 #ff6f00,
         1px -1px 0 #ff6f00,
         -1px 1px 0 #ff6f00;
-
 }
+
 
 .timer-bg {
     background-color: #161616;
