--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -129,7 +129,7 @@
     color: white;
     cursor: pointer;
     border-radius: 5px;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 
 }
 
@@ -157,7 +157,7 @@
 }
 
 .animes {
-    padding-bottom: 50px;
+    padding-bottom: 70px;
 }
 
 .animes img {
@@ -228,7 +228,9 @@
     height: auto;
 }
 
-
+.map-section {
+    margin-top: 70px;
+}
 
 .map-container {
     display: flex;
