--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -163,6 +163,13 @@ a {
 
 }
 
+.logooo>img {
+    height: auto;
+    width: 100px;
+    margin-top: 30px;
+    margin-right: 50px;
+}
+
 .email-title {
     font-size: 2rem;
     font-weight: bold;
