--- a/src/components/header.css
+++ b/src/components/header.css
@@ -73,6 +73,7 @@ header {
     left: 0;
     z-index: 999;
     height: auto;
+    transition: height 0.3s ease;
 
 }
 
@@ -102,6 +103,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-grow: 1;
+    transition: padding 0.3s ease;
 }
 
 .nav-links {
