--- a/src/components/header.css
+++ b/src/components/header.css
@@ -128,7 +128,7 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 50%;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0);
     padding: 1rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 100;
@@ -136,6 +136,7 @@ header {
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    color: white;
 }
 
 .search-form {
