--- a/src/Chatbot.css
+++ b/src/Chatbot.css
@@ -64,10 +64,8 @@
 
 .close.icon:hover {
   background-color: #e65a00;
-  /* Slightly darker orange on hover */
 }
 
-/* Chatbot bubble and header colors */
 .sc-gqjmRU.glfuN.rsc-header {
   background-color: #FFBF00;
 }
@@ -87,4 +85,28 @@
 
 .rsc-content {
   max-height: 400px;
+}
+
+.chatbot-icon {
+  position: relative;
+  display: inline-block;
+}
+
+.notification-badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  background-color: red;
+  color: white;
+  padding: 2px 10px;
+  border-radius: 50%;
+  font-size: 12px;
+}
+
+.chatbot-segment {
+  border: none;
+  box-shadow: none;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  padding: 20px;
 }
