--- a/src/Chatbot.css
+++ b/src/Chatbot.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f1f1f1;
+  background-color: #f1f1f134;
   padding: 10px 15px;
   border-radius: 30px;
   box-shadow: 0px 4px 10px rgba(116, 4, 4, 0.1);
