--- a/src/components/header.css
+++ b/src/components/header.css
@@ -128,7 +128,7 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 50%;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgb(255, 255, 255);
     padding: 1rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 100;
@@ -186,7 +186,7 @@ header {
     transition: top 0.4s ease-in-out, visibility 0s ease-in-out -5s;
     z-index: -1;
     visibility: hidden;
-    border-radius: 20px 20px 20px 20px;
+
 }
 
 .nav-links li a:hover::before,
@@ -202,7 +202,6 @@ header {
     color: black;
     transform: translateY(-2px);
     transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-    border-radius: 20px 20px 20px 20px;
 }
 
 .dropdown {
@@ -248,7 +247,6 @@ header {
     text-decoration: none;
     color: black;
     transition: background-color 0.3s ease-in-out;
-    border-radius: 20px 20px 20px 20px;
 }
 
 .dropdown-menu li a:hover {
